{
  "version": 4,
  "terraform_version": "0.14.0",
  "serial": 44,
  "lineage": "6f48a7a9-4fe0-882b-84b2-fb409efa78ed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-023e9b994a8666d6b",
            "domain": "vpc",
            "id": "eipalloc-0d9abe250b51a5341",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c238b097b3c2af91",
            "private_dns": "ip-10-0-37-108.us-east-2.compute.internal",
            "private_ip": "10.0.37.108",
            "public_dns": "ec2-3-139-163-203.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.163.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "blog-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "lb-testing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:991720585140:loadbalancer/lb-testing",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b",
              "us-east-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "lb-testing-1839648914.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 15,
                "target": "HTTP:8000/index.php",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "lb-testing",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "lb-testing",
            "security_groups": [
              "sg-0efba15c5be235203"
            ],
            "source_security_group": "991720585140/lb-testing",
            "source_security_group_id": "sg-0efba15c5be235203",
            "subnets": [
              "subnet-0a2d49d0dc8a1c11b",
              "subnet-0a5a4f7602e30e055",
              "subnet-0a614f90be936d677"
            ],
            "tags": {
              "Name": "lb-testing"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.lb-tesing",
            "aws_subnet.blog-public1",
            "aws_subnet.blog-public2",
            "aws_subnet.blog-public3",
            "aws_vpc.blog"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "blog-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:internet-gateway/igw-026ed41661ef0fa9f",
            "id": "igw-026ed41661ef0fa9f",
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-igw"
            },
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "blog-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9abe250b51a5341",
            "id": "nat-03793ee30bc1bef1c",
            "network_interface_id": "eni-0c238b097b3c2af91",
            "private_ip": "10.0.37.108",
            "public_ip": "3.139.163.203",
            "subnet_id": "subnet-0a614f90be936d677",
            "tags": {
              "Name": "blog-NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "blog-private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08db415b2b1680402",
            "owner_id": "991720585140",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03793ee30bc1bef1c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-private-RT"
            },
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "blog-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-027800698447204ac",
            "owner_id": "991720585140",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026ed41661ef0fa9f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-public-RT"
            },
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-private1-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073741c4cccbd5ff8",
            "route_table_id": "rtb-08db415b2b1680402",
            "subnet_id": "subnet-034d927d8cd756885"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_route_table.blog-private-RT",
            "aws_subnet.blog-private1",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-private2-RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc54714ac8909c50",
            "route_table_id": "rtb-08db415b2b1680402",
            "subnet_id": "subnet-0ee79fc8e071eafbc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_route_table.blog-private-RT",
            "aws_subnet.blog-private2",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-private3-RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e305e500f2bb09c6",
            "route_table_id": "rtb-08db415b2b1680402",
            "subnet_id": "subnet-0758b966a0e2f1430"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.blog-nat",
            "aws_route_table.blog-private-RT",
            "aws_subnet.blog-private3",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eea1a0fd0c0d19c9",
            "route_table_id": "rtb-027800698447204ac",
            "subnet_id": "subnet-0a5a4f7602e30e055"
          },
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_route_table.blog-public-RT",
            "aws_subnet.blog-public1",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-public2-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044f4df6f009a1ee4",
            "route_table_id": "rtb-027800698447204ac",
            "subnet_id": "subnet-0a614f90be936d677"
          },
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_route_table.blog-public-RT",
            "aws_subnet.blog-public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "blog-public3-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0433039960adc48b1",
            "route_table_id": "rtb-027800698447204ac",
            "subnet_id": "subnet-0a2d49d0dc8a1c11b"
          },
          "dependencies": [
            "aws_internet_gateway.blog-igw",
            "aws_route_table.blog-public-RT",
            "aws_subnet.blog-public3",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-tesing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:security-group/sg-0efba15c5be235203",
            "description": "Allow from all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efba15c5be235203",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow from all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "lb-testing",
            "name_prefix": "",
            "owner_id": "991720585140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-testing"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.blog"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-034d927d8cd756885",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.96.0/19",
            "id": "subnet-034d927d8cd756885",
            "map_public_ip_on_launch": false,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-private1"
            },
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-0ee79fc8e071eafbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.128.0/19",
            "id": "subnet-0ee79fc8e071eafbc",
            "map_public_ip_on_launch": false,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-private2"
            },
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-0758b966a0e2f1430",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.160.0/19",
            "id": "subnet-0758b966a0e2f1430",
            "map_public_ip_on_launch": false,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-private3"
            },
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-0a5a4f7602e30e055",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "id": "subnet-0a5a4f7602e30e055",
            "map_public_ip_on_launch": true,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-public1"
            },
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "dependencies": [
            "aws_vpc.blog"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-0a614f90be936d677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0a614f90be936d677",
            "map_public_ip_on_launch": true,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-public2"
            },
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "dependencies": [
            "aws_vpc.blog"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "blog-public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:subnet/subnet-0a2d49d0dc8a1c11b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.64.0/19",
            "id": "subnet-0a2d49d0dc8a1c11b",
            "map_public_ip_on_launch": true,
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog-public3"
            },
            "vpc_id": "vpc-06ac83671841b41b2"
          },
          "dependencies": [
            "aws_vpc.blog"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "blog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:991720585140:vpc/vpc-06ac83671841b41b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036c00aa506fa2dc8",
            "default_route_table_id": "rtb-05595a2d7215bf24f",
            "default_security_group_id": "sg-0e2b38600e1a5e320",
            "dhcp_options_id": "dopt-5479f23f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06ac83671841b41b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05595a2d7215bf24f",
            "owner_id": "991720585140",
            "tags": {
              "Name": "blog"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}